update isotope to latest version. fix css hack that was making images and text blurry.

--- a/css/sass/partials/_content_areas.scss
+++ b/css/sass/partials/_content_areas.scss
@@ -6,7 +6,6 @@
     width: $content_width;
     max-width: $content_max_width;
     margin: 0 auto $large;
-    transition: transform 0s !important; // override isotope transition time
     h2 {
         margin-bottom: $xsmall;
     }
